Fixed line height for h1 on mobile devices

--- a/queries.css
+++ b/queries.css
@@ -280,7 +280,7 @@
   /* HERO SECTION */
   .heading-primary {
     font-size: 6rem;
-    line-height: 5rem;
+    line-height: 6rem;
   }
   .hero-description {
     font-size: 1.8rem;
